--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,10 @@
 # Configuracion para produccion en Koyeb
-# Koyeb automaticamente inyecta estas variables de entorno
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+
+# Forzar driver MySQL (evita que H2 tome la conexión)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration para produccion
 spring.jpa.hibernate.ddl-auto=update
