--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-# Configuracion para desarrollo local con H2
-# En Koyeb, estas variables se sobrescribiran automaticamente
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Datasource: usa variables de entorno si existen, si no cae a H2 en memoria (dev)
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:h2:mem:testdb}
+spring.datasource.username=${JDBC_DATABASE_USERNAME:sa}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD:}
+spring.datasource.driver-class-name=${JDBC_DRIVER_CLASS_NAME:org.h2.Driver}
 
-# H2 Console para desarrollo local
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:false}
 
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# H2 console (activar local si quieres)
+spring.h2.console.enabled=${H2_CONSOLE_ENABLED:true}
+
+# Puerto (opcional)
+server.port=${PORT:8080}
